@@ -70,8 +70,8 @@ ifeq ($(GNUSTEP_TARGET_OS), mingw32)
 endif
 
 ADDITIONAL_INCLUDE_DIRS = -I../Headers
-ADDITIONAL_CFLAGS = -DBUILDING_SELF
-ADDITIONAL_CXXFLAGS = -DBUILDING_SELF
-ADDITIONAL_OBJCFLAGS = -DBUILDING_SELF
+ADDITIONAL_CFLAGS = -DBUILDING_SELF -DMAC_OS_X_VERSION_MAX_ALLOWED=100700
+ADDITIONAL_CXXFLAGS = -DBUILDING_SELF -DMAC_OS_X_VERSION_MAX_ALLOWED=100700
+ADDITIONAL_OBJCFLAGS = -DBUILDING_SELF -DMAC_OS_X_VERSION_MAX_ALLOWED=100700
 
 include $(GNUSTEP_MAKEFILES)/library.make
